Update cv.nodraak.fr index with headline

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
     <h1>Adrien Chardon - Software and Electronics Engineer</h1>
 
     <p class="summary">
-        Adrien is a software and electronics engineer, with an expertise in embedded systems. He is interested in robots and space, and cares about automation, open source software and code quality.
-        <br/>
-        He recently specialized in aerospace and is interested in launchers and inter-planetary probes.
+        Adrien is a software and electronics engineer, with an expertise in embedded systems.
+        He is interested in robots, launchers and inter-planetary probes. He cares about code quality, automation and open source software.
     </p>
 
     <h2>CV</h1>
