static: disable link to French CV

--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
     <h2>CV</h2>
     <ul>
         <li>En: <a href="https://cv.nodraak.fr/en.pdf">cv.nodraak.fr/AdrienChardon-Resume.pdf</a></li>
-        <li>Fr: <a href="https://cv.nodraak.fr/fr.pdf">cv.nodraak.fr/AdrienChardon-CV.pdf</a></li>
+        <li style="color:gray; text-decoration:line-through;">Fr: <a href="https://cv.nodraak.fr/fr.pdf">cv.nodraak.fr/AdrienChardon-CV.pdf</a></li>
     </ul>
 
     <h2>Projects</h2>
