--- a/static/index.html
+++ b/static/index.html
@@ -4,60 +4,299 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>cv.nodraak.fr</title>
+    <link rel="stylesheet" href="./bulma.min.css">
     <style>
-        body {
-            max-width: 800px;
+        /* CV section */
+        .nodraak-cv figure {
             margin: auto;
-            padding: 8px;
+            overflow: hidden;
+            max-width: 400px;
+            max-height: 250px;
+            border: 1px solid gray;
         }
-        h1 {
-            font-size: 1.5em;
-            text-decoration: underline;
+        .nodraak-cv .block {
+            text-align: center;
         }
-        h2 {
-            font-size: 1.25em;
-            margin-top: 30px;
+        /* Side Projects section */
+        .card .title {
+            margin-bottom: 0.5rem;
         }
-        .summary {
-            font-style: italic;
+        .card-footer-item {
+            text-align: center;
+        }
+        .card-footer-item a:link, .card-footer-item a:visited {
+            color: #3e8ed0;  /* $is-info */
+        }
+        .card-footer-item a:hover {
+            color: #343434;  /* restate default to avoid overwrite */
+        }
+        /* Equal height of card components - https://github.com/jgthms/bulma/issues/218 */
+        .card {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+        .card-footer {
+            margin-top: auto;
+            height: 5rem;  /* Force card-footer to be the same height */
+        }
+        /* Footer */
+        .footer .content a {
+            color: gray;
+        }
+        .footer .icon svg {
+            width: 1.5rem;  /* Fix a random Firefox Android bug */
+        }
+        /* Overwrite margings and paddings */
+        .hero-body, .section, .footer {
+            padding: 1.5rem 3rem;  /* defaults: hero-body=3rem ; .section="3rem 1.5rem" ; .footer="6rem" */
         }
     </style>
 </head>
 <body>
-    <h1>Adrien Chardon - Software and Electronics Engineer</h1>
 
-    <p class="summary">
-        Adrien is a software and electronics engineer, with an expertise in embedded systems.
-        He is interested in robots, launchers and inter-planetary probes. He cares about code quality, automation and open source software.
-    </p>
+    <!-- Title -->
+    <section class="hero is-info">
+        <div class="hero-body">
+            <h1 class="title is-1">Adrien Chardon</h1>
+            <h2 class="subtitle is-3">Aerospace Engineer</h1>
+        </div>
+    </section>
 
-    <h2>CV</h2>
-    <ul>
-        <li>En: <a href="https://cv.nodraak.fr/en.pdf">cv.nodraak.fr/AdrienChardon-Resume.pdf</a></li>
-        <li style="color:gray; text-decoration:line-through;">Fr: <a href="https://cv.nodraak.fr/fr.pdf">cv.nodraak.fr/AdrienChardon-CV.pdf</a></li>
-    </ul>
+    <section class="section">
+        <div class="container">
+            <div class="columns is-centered is-multiline">
 
-    <h2>Projects</h2>
-    <ul>
-        <li>
-            <strong>Blog</strong> (2018-2021): <a href="https://blog.nodraak.fr/">blog.nodraak.fr</a>
-        </li>
-        <li>
-            <strong>MoonLander</strong> (2021): (Moon) lander GNC software written in Rust, with a simulator and KSP bindings.
-            <ul>
-                <li>Source code: <a href="https://github.com/Nodraak/MoonLander.rs">github.com/Nodraak/MoonLander</a></li>
-                <li>Blog articles: <a href="https://blog.nodraak.fr/series/aerospace-simulator/">blog.nodraak.fr/series/aerospace-simulator</a></li>
-            </ul>
-        </li>
-        <li>
-            <strong>Robot Gali X</strong> (2017-2018): Eceborg's (robotic student association at ECE Paris) robot for the French robotic cup (Eurobot)
-            <ul>
-                <li>Video demo: <a href="/gali-prototype.mp4">gali-prototype.mp4</a> (~10 MB)</li>
-                <li>Source code: <a href="https://github.com/Nodraak/Gali_X_Deoxys">github.com/Nodraak/Gali_X_Deoxys</a></li>
-            </ul>
-        </li>
-        <!-- TODO: elec: https://twitter.com/Nodraak/status/930052524052242432 -->
-    </ul>
+                <!-- Description -->
+                <div class="column">
+                    <p>
+                        <strong>I am a software and electronics engineer, with an expertise in embedded systems.</strong>
+                        I have a wide range of skills, enabling me to be efficient at many different tasks.
+                        <br>
+                        <strong>I am interested in robots, launchers and inter-planetary probes.</strong>
+                        I prefer to write code that interacts with the physical world, and runs in space.
+                        <br>
+                        <strong>I care about code quality, automation and open source software.</strong>
+                        I invest heavily in tooling, to limit errors and free myself form mundane tasks.
+                        I like to use and contribute to open source to avoid reinventing the wheel.
+                    </p>
+                    <p class="mt-5">
+                        <strong>I am currently looking for a position as an aerospace engineer.</strong>
+                        I am the most efficient when writing embedded software.
+                        But I have a strong interest in contributing to a project from start to finish (requirements, system engineering, work packages and schedule, testing and validation, operations, ...).
+                    </p>
+                </div>
+
+                <!-- CV -->
+                <!-- pdftoppm -jpeg -r 50 AdrienChardon-Resume-web.pdf static/cv-AdrienChardon-Resume-web -->
+                <div class="column nodraak-cv">
+                    <div class="block">
+                        <figure class="image">
+                            <img src="./cv-AdrienChardon-Resume-web-1.jpg" alt="AdrienChardon's Resume">
+                        </figure>
+                    </div>
+                    <div class="block">
+                        <a href="https://cv.nodraak.fr/en.pdf" class="button is-info is-light">
+                            View classic CV
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
+        <hr style="margin: 0;">
+    </section>
+
+    <section class="section">
+        <div class="container">
+            <div class="block">
+                <h2 class="title is-4">Side projects</h2>
+            </div>
+            <div class="columns">
+
+
+                <!-- Project 1 - Blog -->
+                <div class="column">
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image is-16by9">
+                                <!-- TODO -->
+                                <img src="project-blog.png" alt="Adrien Chardon's blog's homepage">
+                            </figure>
+                        </div>
+                        <div class="card-content">
+                            <div class="content">
+                                <h3 class="title is-5">
+                                    Blog
+                                </h3>
+                                <div class="tags">
+                                    <span class="tag is-info is-light">2018-2023</span>
+                                    <span class="tag is-info is-light">Text</span>
+                                </div>
+                                <p>
+                                    Collection of articles on various topics.
+                                    My interests currently cover
+                                    software engineering (embedded software, improving quality of critical software, Rust),
+                                    orbital mechanics and GNC,
+                                    and other miscellaneous topics (training for a marathon).
+                                </p>
+                            </div>
+                        </div>
+                        <footer class="card-footer">
+                            <p class="card-footer-item">
+                                <a href="https://blog.nodraak.fr/">Read more</a>
+                            </p>
+                        </footer>
+                    </div>
+                </div>
+
+                <!-- Project 2 - MoonLander -->
+                <div class="column">
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image is-16by9">
+                                <!-- 1680/900 - https://blog.nodraak.fr/images/2020/08/aerospace-sim/GNC.svg -->
+                                <img src="./project-GNC.svg" alt="Canonical GNC diagram">
+                            </figure>
+                        </div>
+                        <div class="card-content">
+                            <div class="content">
+                                <h3 class="title is-5">
+                                    Moon Lander GNC Software
+                                </h3>
+                                <div class="tags">
+                                    <span class="tag is-info is-light">2021</span>
+                                    <span class="tag is-info is-light">Rust</span>
+                                    <span class="tag is-info is-light">Aerospace / GNC</span>
+                                </div>
+                                <p>
+                                    (Moon) lander GNC software written in Rust.
+                                    It reimplements the guidance algorithms used by Apollo missions.
+                                    It comes with a physics simulator and KSP bindings for testing.
+                                </p>
+                            </div>
+                        </div>
+                        <footer class="card-footer">
+                            <p class="card-footer-item">
+                                <a href="https://blog.nodraak.fr/series/aerospace-simulator/">Learn more on my blog</a>
+                            </p>
+                            <p class="card-footer-item">
+                                <a href="https://github.com/Nodraak/MoonLander.rs">Source code</a>
+                            </p>
+                        </footer>
+                    </div>
+                </div>
+
+                <!-- Project 3 - Running -->
+                <div class="column">
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image is-16by9">
+                                <!-- 1200/900 - https://github.com/Nodraak/Running/blob/master/build/trainings-1-distance-and-milage.png -->
+                                <img src="./project-trainings-1-distance-and-milage.png" alt="Training distance and mileage">
+                            </figure>
+                        </div>
+                        <div class="card-content">
+                            <div class="content">
+                                <h3 class="title is-5">
+                                    Running Performance Analysis
+                                </h3>
+                                <div class="tags">
+                                    <span class="tag is-info is-light">2022-2023</span>
+                                    <span class="tag is-info is-light">Python</span>
+                                    <span class="tag is-info is-light">Data Analysis</span>
+                                </div>
+                                <p>
+                                    Data and scripts used to keep track of my running activity.
+                                    Includes (among others) training analysis and race results graphs.
+                                </p>
+                            </div>
+                        </div>
+                        <footer class="card-footer">
+                            <p class="card-footer-item">
+                                <a href="https://github.com/Nodraak/Running">
+                                    Learn more
+                                    <br>
+                                    <small>(source code)</small>
+                                </a>
+                            </p>
+                        </footer>
+                    </div>
+                </div>
+
+                <!-- Project 4 - Gali -->
+                <div class="column">
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image is-16by9">
+                                <!-- 1280/720 - ffmpeg -i static/gali-prototype.mp4 -vf fps=1 out/project-gali-%03d.jpg -->
+                                <img src="./project-gali-014.jpg" alt="Robot Gali">
+                            </figure>
+                        </div>
+                        <div class="card-content">
+                            <div class="content">
+                                <h3 class="title is-5">
+                                    Gali Robot Software
+                                </h3>
+                                <div class="tags">
+                                    <span class="tag is-info is-light">2017-2018</span>
+                                    <span class="tag is-info is-light">C</span>
+                                    <span class="tag is-info is-light">Embedded Systems</span>
+                                </div>
+                                <p>
+                                    Source code of the Gali robot.
+                                    It was built as part of my studies with the robotic student association (Eceborg) for the French robotic cup (Eurobot).
+                                </p>
+                            </div>
+                        </div>
+                        <footer class="card-footer">
+                            <p class="card-footer-item">
+                                <a href="./project-gali-prototype.mp4">
+                                    Video demo
+                                    <br>
+                                    <small>(11 MB)</small>
+                                </a>
+                            </p>
+                            <p class="card-footer-item">
+                                <a href="https://github.com/Nodraak/Gali_X_Deoxys">Source code</a>
+                            </p>
+                        </footer>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <span>
+                <a href="mailto:<firstname><lastname>@mailoo.org">
+                    &lt;firstname&gt;&lt;lastname&gt;@mailoo.org
+                </a>
+            </span>
+        </div>
+        <div class="content has-text-centered">
+            <span class="icon">
+                <a href="https://github.com/Nodraak/">
+                    <svg aria-hidden="true" fill="currentColor" viewBox="0 0 24 24">
+                    <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"></path>
+                    </svg>
+                </a>
+            </span>
+            <span class="icon">
+                <a href="https://www.linkedin.com/in/adrien-chardon-engineer/">
+                    <svg aria-hidden="true" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                    </svg>
+                </a>
+            </span>
+        </div>
+    </footer>
 
 </body>
 </html>
