en: add Reflex's SIGI and miscs updates

--- a/static/index.html
+++ b/static/index.html
@@ -82,11 +82,13 @@
                         I invest heavily in tooling, to limit errors and free myself form mundane tasks.
                         I like to use and contribute to open source to avoid reinventing the wheel.
                     </p>
+                    <!--
                     <p class="mt-5">
                         <strong>I am currently looking for a position as an aerospace engineer.</strong>
                         I am the most efficient when writing embedded software.
                         But I also have a strong interest in contributing to a project from start to finish (requirements, system engineering, work packages and schedule, testing and validation, operations, ...).
                     </p>
+                    -->
                 </div>
 
                 <!-- CV -->
@@ -290,6 +292,8 @@
                 <a href="mailto:adrienchardon AT mailoo.org">
                     adrienchardon AT mailoo.org
                 </a>
+                -
+                Last update: 2023-10
             </span>
         </div>
         <div class="content has-text-centered">
